# arch7

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
arch7_mcp/: __init__.py  __main__.py  server.py
arch7_mcp/core/: __init__.py  components.py  icons.py  models.py  themes.py  validation.py
arch7_mcp/engine/: __init__.py  layout.py  renderer.py
arch7_mcp/parsers/: __init__.py  mermaid.py  state.py
tests/: conftest.py  test_components_icons.py  test_layout.py  test_mermaid_parser.py  test_renderer.py  test_server.py
